[package]
authors = ["Radosław Kot <rdkt13@gmail.com>"]
edition = "2018"
name = "configuration-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
experimental_serde_ron = ["ron"]
experimental_xml = ["serde-xml-rs"]
ini = ["serde_ini"]
json = ["serde_json"]
msgpack = ["rmp-serde"]
serde_json5 = ["json5"]
serde_toml = ["toml"]
yaml = ["serde_yaml"]

[dependencies]
async-trait = {version = "0.1"}
futures = {version = "0.3"}
serde = {version = "1.0", features = ["derive"]}
# optional dependencies
json5 = {version = "0.2", optional = true}
rmp-serde = {version = "0.14", optional = true}
ron = {version = "0.6", optional = true}
serde-xml-rs = {version = "0.4", optional = true}
serde_ini = {version = "0.2", optional = true}
serde_json = {version = "1.0", optional = true}
serde_yaml = {version = "0.8", optional = true}
toml = {version = "0.5", optional = true}

[dev-dependencies]
rmp-serde = {version = "0.14"}
rstest = {version = "0.6.4"}
serde_json = {version = "1.0"}
serde_yaml = {version = "0.8"}
tokio = { version = "0.3.5", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
