[package]
authors = ["Radosław Kot <rdkt13@gmail.com>"]
categories = ["asynchronous", "config"]
description = "Async aware and extensible layered configuration system"
edition = "2018"
homepage = "https://github.com/szarykott/miau"
keywords = ["configuration", "async", "config", "layered"]
license = "MIT"
license-file = "LICENSE.md"
name = "miau"
readme = "README.md"
repository = "https://github.com/szarykott/miau"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all = ["ini", "json", "msgpack", "serde_json5", "serde_toml", "yaml"]
ini = ["serde_ini"]
json = ["serde_json"]
msgpack = ["rmp-serde"]
serde_json5 = ["json5"]
serde_toml = ["toml"]
yaml = ["serde_yaml"]

# TODO: Use patch version as well in here

[dependencies]
async-trait = {version = "0.1.42"}
futures = {version = "0.3.8"}
serde = {version = "1.0.118", features = ["derive"]}
# optional dependencies
json5 = {version = "0.3.0", optional = true}
rmp-serde = {version = "0.15.0", optional = true}
serde_ini = {version = "0.2.0", optional = true}
serde_json = {version = "1.0.60", optional = true}
serde_yaml = {version = "0.8.14", optional = true}
toml = {version = "0.5.8", optional = true}

[dev-dependencies]
rmp-serde = {version = "0.15.0"}
rstest = {version = "0.6.4"}
serde_json = {version = "1.0.60"}
serde_yaml = {version = "0.8.14"}
tokio = {version = "0.3.5", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"]}
