[package]
edition = "2018"
name = "examples"
publish = false
version = "0.0.0"

[dev-dependencies]
async-trait = {version = "0.1"}
miau = {path = "..", features = ["all"]}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "0.3.5", features = ["full"]}

[[example]]
name = "basic"
path = "basic.rs"

[[example]]
name = "custom_async_source"
path = "custom_async_source.rs"
